cros: consolidate uma record when executing app menu command

changes:
Consolidate uma recording when executing app menu command.
Both shelf and app list code record
Apps.ContextMenuExecuteCommand in AppMenuModelAdapter code
path. It was used to record in
SimpleMenuModel::RecordHistogram. However, app list doesn't
exercise through that path maybe due to the refactoring (it
calls delegate()'s code path now).

This CL fixes the regression. And it is more straightforward
to find where Apps.ContextMenuExecuteCommand UMA is recorded.

Bug: 846370
Test: manual test
Change-Id: Ib59ab96f2647d068af55118e150b81b3758a4a60
Reviewed-on: https://chromium-review.googlesource.com/1107720
Commit-Queue: Qiang Xu <warx@google.com>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569443}
Former-commit-id: c5bad7fe34d6c31ccd858c75beba84141b4ec6b7