chrome/browser/ui/app_list/app_context_menu.cc
@@ -31,7 +31,6 @@ AppContextMenu::~AppContextMenu() = default;
 void AppContextMenu::GetMenuModel(GetMenuModelCallback callback) {
   auto menu_model = std::make_unique<ui::SimpleMenuModel>(this);
   BuildMenu(menu_model.get());
-  menu_model->set_histogram_name("Apps.ContextMenuExecuteCommand.FromApp");
   std::move(callback).Run(std::move(menu_model));
 }
 
